--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,26 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "12f098563d0b4222",
+        "id": "ad5f556db9d0937c",
         "type": "leaf",
-        "dimension": 64.41471571906354,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/Leetcode/Questions/347. Top K Frequent Elements.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "b5ebfb199ed09298",
-        "type": "leaf",
-        "dimension": 35.58528428093645,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "docs/Leetcode/Questions/75. Sort Colors.md",
+            "file": "docs/Leetcode/Questions/49. Group Anagrams.md",
             "mode": "source",
             "source": false
           }
@@ -54,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "#finding",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -99,7 +85,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/Leetcode/Questions/347. Top K Frequent Elements.md",
+                "file": "docs/Leetcode/Questions/49. Group Anagrams.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -127,7 +113,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/Leetcode/Questions/347. Top K Frequent Elements.md"
+                "file": "docs/Leetcode/Questions/49. Group Anagrams.md"
               }
             }
           },
@@ -137,7 +123,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/Leetcode/Questions/347. Top K Frequent Elements.md",
+                "file": "docs/Leetcode/Questions/49. Group Anagrams.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -150,26 +136,33 @@
               "type": "calendar",
               "state": {}
             }
+          },
+          {
+            "id": "0add634a91feb92b",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
         ],
-        "currentTab": 4
+        "currentTab": 5
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
-  "active": "12f098563d0b4222",
+  "active": "ad5f556db9d0937c",
   "lastOpenFiles": [
-    "docs/Leetcode/Questions/215. Kth Largest Element in an Array.md",
-    "docs/Leetcode/Questions/347. Top K Frequent Elements.md",
-    "docs/Leetcode/Questions/973. K Closest Points to Origin.md",
-    "docs/Leetcode/Questions/703. Kth Largest Element in a Stream.md",
-    "docs/Leetcode/Concepts/Heap.md",
-    "docs/Personal/Work/AIOPs - Timing.md",
-    "docs/Leetcode/Questions/75. Sort Colors.md",
-    "docs/Personal/Note to Myself.md",
-    "docs/Personal/Work/TODOs.md",
-    "docs/Personal/Work/Log Anomaly Detection/Untitled.md"
+    "docs/Leetcode/Questions/438. Find All Anagrams in a String.md",
+    "docs/Leetcode/Questions/242. Valid Anagram.md",
+    "docs/Leetcode/Questions/125. Valid Palindrome.md",
+    "docs/Papers/Deep Learning for Anomaly Detection in Log Data A Survey.md",
+    "docs/Papers/Paper Reading List.md",
+    "docs/Personal/Work/KG for Log Analysis.md",
+    "docs/Leetcode/Lists/MasterList.md",
+    "docs/Leetcode/Lists/String.md",
+    "docs/Leetcode/Questions/424. Longest Repeating Character Replacement.md",
+    "docs/Personal/Ajay 1-1.md"
   ]
 }
